Improved work-pulling example